<resources>
    <string name="app_name">StoreManager</string>
    <string name="title_login">ĐĂNG NHẬP</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_repass">Lưu mật khẩu</string>
    <string name="forgetpass">Quên mật khẩu?</string>
    <string name="login">Đăng nhập</string>
    <string name="name1">Họ tên</string>
    <string name="age">Tuổi</string>
    <string name="phone">Số điện thoại</string>
    <string name="email">Email</string>
    <string name="note1">* Thông tin này dùng để lấy mật khẩu đăng nhập.</string>
    <string name="note2">* Bạn nên điền đầy đủ thông tin.</string>
    <string name="note3">* Bạn có thể chỉnh sửa và điền thông tin trong phần tài khoản</string>
    <string name="title_accuracy_info">XÁC THỰC THÔNG TIN</string>
    <string name="later">Để sau</string>
    <string name="accuracy">Xác thực</string>
    <string name="hotline">Hotline: 0329144446</string>
    <string name="title_activity_home">Chức năng</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nguyễn Hữu Văn</string>
    <string name="nav_header_subtitle">VanNHPH06247@fpt.edu.vn</string>
    <string name="title_activity_customer">Khách hàng</string>
    <string name="search">Tìm kiếm</string>
    <string name="delete">Xóa</string>
    <string name="update">Cập nhật</string>
    <string name="vnd">VNĐ</string>
    <string name="delete_message_customer">Bạn có muốn xóa khách hàng này không?</string>
    <string name="yes">Có</string>
    <string name="no">Không</string>
    <string name="title_activity_edit_customer">Cập nhật thông tin</string>
    <string name="other_info">Thông tin khác</string>
    <string name="note">Ghi chú</string>
    <string name="address">Địa chỉ</string>
    <string name="save">Lưu</string>
    <string name="title_activity_information_customer">Thông tin khách hàng</string>
    <string name="title_activity_product_type">Nhóm hàng</string>
    <string name="delete_message_product_type">Bạn có muốn xóa nhóm hàng này không?</string>
    <string name="addProductType">Thêm nhóm hàng</string>
    <string name="product_type_ID">Mã nhóm hàng</string>
    <string name="productTypeName">Tên nhóm hàng</string>
    <string name="productDes">Mô tả</string>
    <string name="add">Thêm</string>
    <string name="cancel">Hủy</string>
    <string name="editProductType">Sửa nhóm hàng</string>
    <string name="title_activity_infor_product_type">Thông tin nhóm hàng</string>
    <string name="title_activity_product">Sản phẩm</string>
    <string name="delete_message_product">Bạn có muốn xóa sản phẩm này không?</string>
    <string name="title_activity_add_product_actitivy">Thêm sản phẩm</string>
    <string name="title_activity_edit_product">Cập nhật sản phẩm</string>
    <string name="productID">Mã sản phẩm</string>
    <string name="productName">Tên sản phẩm</string>
    <string name="productPriceOut">Giá bán</string>
    <string name="productPriceIn">Giá  nhập</string>
    <string name="productQuantity">Số lượng</string>
    <string name="title_activity_bill">Hóa đơn</string>
    <string name="delete_message_bill">Bạn có muốn xóa hóa đơn này không?</string>
    <string name="billID">Mã hóa đơn</string>
    <string name="edit">Sửa</string>
    <string name="addBill">Thêm hóa đơn</string>
    <string name="editBill">Sửa hóa đơn</string>
    <string name="title_activity_infor_bill">Thông tin hóa đơn</string>
    <string name="title_activity_infor_admin">Thông tin tài khoản</string>
    <string name="changepass">Đổi mật khẩu</string>
    <string name="title_activity_edit_infor_admin">Cập nhật thông tin</string>
    <string name="change_pass">Đổi mật khẩu</string>
    <string name="passOld">Mật khẩu cũ</string>
    <string name="passNew">Mật khẩu mới</string>
    <string name="passNew2">Nhập lại mật khẩu</string>
    <string name="change">Đổi</string>
    <string name="forget_pass">Quên mật khẩu</string>
    <string name="getpass">Lấy mật khẩu</string>
    <string name="title_activity_selling_products">Sản phẩm đã bán</string>
    <string name="total_product">Tổng số 100 sản phẩm</string>
    <string name="title_activity_statistic">Thống kê</string>
    <string name="title_activity_infor_product">Thông tin sản phẩm</string>
    <string name="title_activity_add_customer_activty">Thêm khách hàng</string>
    <string name="click">Chọn có để thoát!</string>
    <string name="back">Bạn có muốn thoát không?</string>
    <string name="title_activity_edit_infor_customer">Khôi phục dữ liệu</string>
    <string name="recovery">Khôi phục</string>
    <string name="title_activity_edited_product_type_infor">Khôi phục dữ liệu</string>
    <string name="title_activity_edited_product_infor">Khôi phục dữ liệu</string>
    <string name="title_activity_edited_bill_infor">Khôi phục dữ liệu</string>
    <string name="title_activity_product_list_of_customer">Danh sách sản phẩm</string>
    <string name="title_activity_product_list_of_product_type">Danh sách sản phẩm
    </string>
    <string name="title_activity_product_list_of_bill">Hóa đơn chi tiết</string>
    <string name="title_activity_bill_detail">Hóa đơn chi tiết</string>
    <string name="buy">Mua</string>
    <string name="listofproduct">Danh sách sản phẩm mua</string>
    <string name="pay">Thanh toán: </string>
    <string name="notify_empty_user">Tên tài khoản không được để trống</string>
    <string name="notify_empty_pass">Mật khẩu không được để trống</string>
    <string name="notify_length_pass_min">Mật khẩu phải có ít nhất 6 kí tự</string>
    <string name="user_not_exitst">Tài khoản không tồn tại</string>
    <string name="wrong_pass">Mật khẩu bạn nhập không đúng</string>
    <string name="notify_length_pass_max">Mật khẩu không được vượt quá 50 kí tự</string>
    <string name="notify_empty_name">Họ tên không được để trống</string>
    <string name="notify_empty_age">Tuổi không được để trống</string>
    <string name="notify_empty_phone">Số điện thoại không được để trống</string>
    <string name="notify_empty_email">Email không được để trống</string>
    <string name="notify_length_name">Họ tên không được vượt quá 30 kí tự</string>
    <string name="notify_length_email">Email không được vượt quá 30 kí tự</string>
    <string name="notify_same_sdt">Phải đúng dạng số điện thoại</string>
    <string name="notify_same_email">Phải đúng dạng email</string>
    <string name="notify_length_age_max">Tuổi phải nhỏ hơn 150</string>
    <string name="notify_length_age_min">Tuổi phải lớn hơn 0</string>
    <string name="notify_empty_passold">Mật khẩu cũ không được để trống</string>
    <string name="notify_empty_passnew">Mật khẩu mới không được để trống</string>
    <string name="notify_empty_passnew2">Nhập lại mật khẩu mới</string>
    <string name="notify_same_pass">Mật khẩu không trùng nhau</string>
    <string name="change_pass_success">Thay đổi mật khẩu thành công tài khoản:</string>
    <string name="change_pass_failed">Đổi mật khẩu thất bại</string>
    <string name="V">V</string>
    <string name="string_exist_2_space">Xuất hiện 2 khoảng trắng ở giữa chuỗi</string>
    <string name="primarykey_exist_space">Xuất hiện khoảng trắng ở giữa chuỗi</string>
    <string name="wrong_email">Email bạn nhập không đúng</string>
    <string name="wrong_phone">Số điện thoại bạn nhập không đúng</string>
    <string name="notify_empty_product_type_id">Mã nhóm hàng không được để trống</string>
    <string name="notify_empty_product_type_name">Tên nhóm hàng không được để trống</string>
    <string name="notify_empty_product_type_des">Mô tả không được để trống
    </string>
    <string name="notify_length_product_type_des">Mô tả không được vượt quá 255 kí tự</string>
    <string name="notify_length_product_type_id">Mã nhóm hàng không được vượt quá 10 kí tự</string>
    <string name="notify_length_product_type_name">Tên nhóm hàng không được vượt quá 50 ki tự</string>
    <string name="product_type_id_exist">Mã nhóm hàng đã tồn tại</string>
    <string name="title_nav_home">Chức năng</string>
    <string name="title_nav_admin">Tài khoản</string>
    <string name="title_nav_toexcel">Chuyển sang file Excel</string>
    <string name="title_nav_infor_app">Thông tin phần mềm</string>
    <string name="title_nav_logout">Đăng xuất</string>
    <string name="title_nav_back">Thoát</string>
    <string name="day">Hôm nay</string>
    <string name="week">Tuần này</string>
    <string name="month">Tháng này</string>
    <string name="year">Năm này</string>
    <string name="quantity_up">Số lượng tăng</string>
    <string name="quantity_down">Số lượng giảm</string>
    <string name="sort_by_name">Sắp xếp theo tên</string>
    <string name="sort_by_id">Sắp xếp theo mã</string>
    <string name="price_up">Tổng tiền tăng</string>
    <string name="price_down">Tổng tiền giảm</string>
    <string name="notify_empty_product_id">Mã sản phẩm không được để trống</string>
    <string name="notify_empty_product_name">Tên sản phẩm không được để trống</string>
    <string name="notify_empty_product_input_price">Giá nhập không được để trống</string>
    <string name="notify_empty_product_output_price">Giá bán không được để trống</string>
    <string name="notify_empty_quantity">Số lượng không được để trống</string>
    <string name="notify_length_product_id">Mã sản phẩm không được vượt quá 10 kí tự</string>
    <string name="notify_length_product_name">Tên sản phẩm không được vượt quá 50 kí tự</string>
    <string name="number_too_large">Số bạn nhập ngoài phạm vi tính toán(Error int)</string>
    <string name="price_error">Giá nhập vào phải nhỏ hơn giá bán ra</string>
    <string name="notify_0">Phải lớn hơn 0</string>
    <string name="product_id_exist">Mã nhóm hàng đã tồn tại</string>
    <string name="deleteall">Xóa tất cả</string>
    <string name="delete_message_allproduct">Bạn có muốn xóa tất cả sản phẩm trong nhóm hàng này không?</string>
    <string name="message_toexcel">Bạn có muốn chuyển dữ liệu sang file excel không?</string>
    <string name="notify_empty_bill_id">Mã hóa đơn không được để trống</string>
    <string name="notify_length_billID">Mã hóa đơn không được quá 10 kí tự</string>
    <string name="bill_id_exist">Mã hóa đơn này đã tồn tại</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="notify_length_address">Địa chỉ không được vượt quá 50 kí tự</string>
    <string name="notify_length_note">Ghi chú không được vượt quá 255 kí tự</string>
    <string name="customer_id_exist">Khách hàng này đã tồn tại</string>
    <string name="customer">Khách hàng</string>
    <string name="product_type">Nhóm hàng</string>
    <string name="product">Sản phẩm</string>
    <string name="bill">Hóa đơn</string>
    <string name="selling">Sản phẩm đã bán</string>
    <string name="statistic">Thống kê</string>
    <string name="total">Tổng số</string>
    <string name="chooseProductType">Chọn nhóm hàng</string>
    <string name="cannot_find_result">Không tìm thấy kết quả</string>
    <string name="deleted">Đã xóa</string>
    <string name="deletefail">Xóa thất bại</string>
    <string name="bill_">hóa đơn</string>
    <string name="product_">sản phẩm</string>
    <string name="edited">Sửa thành công</string>
    <string name="all">Tất cả</string>
    <string name="month1">Tháng 1</string>
    <string name="month2">Tháng 2</string>
    <string name="month3">Tháng 3</string>
    <string name="month4">Tháng 4</string>
    <string name="month5">Tháng 5</string>
    <string name="month6">Tháng 6</string>
    <string name="month7">Tháng 7</string>
    <string name="month8">Tháng 8</string>
    <string name="month9">Tháng 9</string>
    <string name="month10">Tháng 10</string>
    <string name="month11">Tháng 11</string>
    <string name="month12">Tháng 12</string>
</resources>